# audio-visualizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
macos/: Info.plist  audiovisualizer-distribution.entitlements  audiovisualizer.entitlements  sandbox-test.entitlements
scripts/: bundle_macos.sh  bundle_macos_deps.sh  release_appstore_macos.sh  release_github_macos.sh  sign-sandbox-test.sh  smoke_persistence.sh
src/: app_state.h  config.c  config.h  main.c
src/analyzer/: analyzer.c  analyzer.h  window_fn.c  window_fn.h
src/audio/: audio_source.c  audio_source.h  miniaudio_impl.c  pcm_ring.c  pcm_ring.h  source_demo.c  source_file_miniaudio.c  source_mic_miniaudio.c  source_system_miniaudio.c  source_test_tone.c
src/audio/platform/: source_system_macos_tap.m
src/platform/: paths.c  paths.h
src/render/: color.c  color.h  pixel_buffer.c  pixel_buffer.h  renderer.c  renderer.h
src/ui/: controls.c  controls.h  overlay.c  overlay.h  text.c  text.h
windows/: app.rc
